change twitter account

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author :
   name : IntelDan
   email : intelligence.dance@gmail.com
   github : IntelDan
-  twitter : IntelDan
+  twitter : IntelDan_lp
   feedburner : IntelDan
 
 # The production_url is only used when full-domain names are needed
